@@ -41,6 +41,8 @@ COM_WEBLINKS_FIELD_COUNTCLICKS_LABEL="Count Clicks"
 COM_WEBLINKS_FIELD_DESCRIPTION_DESC="Enter a description for the web link."
 COM_WEBLINKS_FIELD_DISPLAY_NUM_DESC="Default number of Web links to list on a page."
 COM_WEBLINKS_FIELD_DISPLAY_NUM_LABEL="# of Web links to List"
+COM_WEBLINKS_FIELD_HEIGHT_DESC="Height of the target popup or modal window. Defaults to 600x500 if one field is left empty."
+COM_WEBLINKS_FIELD_HEIGHT_LABEL="Height"
 COM_WEBLINKS_FIELD_LANGUAGE_DESC="Assign a language to this weblink"
 COM_WEBLINKS_FIELD_ORDERING_DESC="Select the Ordering"
 COM_WEBLINKS_FIELD_ORDERING_LABEL="Ordering"
@@ -53,6 +55,8 @@ COM_WEBLINKS_FIELD_TITLE_DESC="Web Link must have a title"
 COM_WEBLINKS_FIELD_URL_DESC="You must enter a URL."
 COM_WEBLINKS_FIELD_URL_LABEL="URL"
 COM_WEBLINKS_FIELD_VALUE_REPORTED="Reported"
+COM_WEBLINKS_FIELD_WIDTH_DESC="Width of the target popup or modal window. Defaults to 600x500 if one field is left empty."
+COM_WEBLINKS_FIELD_WIDTH_LABEL="Width"
 COM_WEBLINKS_FIELDSET_OPTIONS="Basic Options"
 COM_WEBLINKS_FILTER_CATEGORY="Filter Category"
 COM_WEBLINKS_FILTER_STATE="Filter State"
