@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-Dec-2010 Jean-Marie Simonet
+ # [#23977] Weblink: modal and popup target window patch
+
 25-Dec-2010 Jean-Marie Simonet
  # [#23970] language string missing COM_BANNERS_FIELD_VALUE_0. Thanks Bill.
  $ [#23927] Bad Translation
